@@ -1,1 +1,1 @@
-languages=[{"name":"Arabic","tag":"ar"},{"name":"Bulgarian","tag":"bg"},{"name":"Bengali","tag":"bn"},{"name":"Bosnian","tag":"bs"},{"name":"Catalan","tag":"ca"},{"name":"Czech","tag":"cs"},{"name":"Danish","tag":"da"},{"name":"German","tag":"de"},{"name":"Greek","tag":"el"},{"name":"English","tag":"en"},{"name":"English American","tag":"en-US"},{"name":"English British","tag":"en-GB"},{"name":"Spanish","tag":"es"},{"name":"Estonian","tag":"et"},{"name":"Persian","tag":"fa"},{"name":"Finnish","tag":"fi"},{"name":"Fijian","tag":"fj"},{"name":"French","tag":"fr"},{"name":"Irish","tag":"ga"},{"name":"Hindi","tag":"hi"},{"name":"Croatian","tag":"hr"},{"name":"Hungarian","tag":"hu"},{"name":"Indonesian","tag":"id"},{"name":"Italian","tag":"it"},{"name":"Japanese","tag":"ja"},{"name":"Georgian","tag":"ka"},{"name":"Khmer","tag":"km"},{"name":"Korean","tag":"ko"},{"name":"Latin","tag":"la"},{"name":"Lithuanian","tag":"lt"},{"name":"Lao","tag":"lo"},{"name":"Latvian","tag":"lv"},{"name":"Macedonian","tag":"mk"},{"name":"Malayalam","tag":"ml"},{"name":"Moldavian","tag":"mo"},{"name":"Marati","tag":"mr"},{"name":"Malaysian","tag":"ms"},{"name":"Maltese","tag":"mt"},{"name":"Burmese","tag":"my"},{"name":"Nepali","tag":"ne"},{"name":"Dutch","tag":"nl"},{"name":"Norwegian","tag":"no"},{"name":"Polish","tag":"pl"},{"name":"Portuguese","tag":"pt"},{"name":"Brazilian Portuguese","tag":"pt-br"},{"name":"Romanian","tag":"ro"},{"name":"Russian","tag":"ru"},{"name":"Sinhala","tag":"si"},{"name":"Slovak","tag":"sk"},{"name":"Slovenian","tag":"sl"},{"name":"Albanian","tag":"sq"},{"name":"Serbian","tag":"sr"},{"name":"Swedish","tag":"sv"},{"name":"Swahili","tag":"sw"},{"name":"Telugu","tag":"te"},{"name":"Thai","tag":"th"},{"name":"Turkish","tag":"tr"},{"name":"Ukrainian","tag":"uk"},{"name":"Vietnamese","tag":"vi"},{"name":"Chinese","tag":"zh"}]
+languages=[{"name":"Arabic","tag":"ar"},{"name":"Bulgarian","tag":"bg"},{"name":"Bengali","tag":"bn"},{"name":"Bosnian","tag":"bs"},{"name":"Catalan","tag":"ca"},{"name":"Czech","tag":"cs"},{"name":"Danish","tag":"da"},{"name":"German","tag":"de"},{"name":"Greek","tag":"el"},{"name":"English","tag":"en"},{"name":"English American","tag":"en-US"},{"name":"English British","tag":"en-GB"},{"name":"Spanish","tag":"es"},{"name":"Estonian","tag":"et"},{"name":"Persian","tag":"fa"},{"name":"Finnish","tag":"fi"},{"name":"Fijian","tag":"fj"},{"name":"French","tag":"fr"},{"name":"Irish","tag":"ga"},{"name":"Hindi","tag":"hi"},{"name":"Croatian","tag":"hr"},{"name":"Hungarian","tag":"hu"},{"name":"Indonesian","tag":"id"},{"name":"Icelandic","tag":"is"},{"name":"Italian","tag":"it"},{"name":"Japanese","tag":"ja"},{"name":"Georgian","tag":"ka"},{"name":"Khmer","tag":"km"},{"name":"Korean","tag":"ko"},{"name":"Latin","tag":"la"},{"name":"Lithuanian","tag":"lt"},{"name":"Lao","tag":"lo"},{"name":"Latvian","tag":"lv"},{"name":"Macedonian","tag":"mk"},{"name":"Malayalam","tag":"ml"},{"name":"Moldavian","tag":"mo"},{"name":"Marati","tag":"mr"},{"name":"Malaysian","tag":"ms"},{"name":"Maltese","tag":"mt"},{"name":"Burmese","tag":"my"},{"name":"Nepali","tag":"ne"},{"name":"Dutch","tag":"nl"},{"name":"Norwegian","tag":"no"},{"name":"Polish","tag":"pl"},{"name":"Portuguese","tag":"pt"},{"name":"Brazilian Portuguese","tag":"pt-br"},{"name":"Romanian","tag":"ro"},{"name":"Russian","tag":"ru"},{"name":"Sinhala","tag":"si"},{"name":"Slovak","tag":"sk"},{"name":"Slovenian","tag":"sl"},{"name":"Albanian","tag":"sq"},{"name":"Serbian","tag":"sr"},{"name":"Swedish","tag":"sv"},{"name":"Swahili","tag":"sw"},{"name":"Telugu","tag":"te"},{"name":"Thai","tag":"th"},{"name":"Turkish","tag":"tr"},{"name":"Ukrainian","tag":"uk"},{"name":"Vietnamese","tag":"vi"},{"name":"Chinese","tag":"zh"}]
